2012-11-16  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/Vector.h : added static methods Vector::is_na and
        Vector::get_na
        * inst/include/Rcpp/sugar/functions/setdiff.h: initial version of setdiff

2012-11-15  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/logical/SingleLogicalResult.h : apply patch suggested
        by Karl Millar
        * R/Attributes.R: new R function areMacrosDefined
        * man/evalCpp.Rd: documentation update
        * include/Rcpp/sugar/functions/match.h : generic version of match
        * include/Rcpp/sugar/tools/iterator.h: help iterator that helps writing match 
        in terms of stl algorithms.
        * include/Rcpp/vector/Vector.h: class no_init that can be used to create
        an uninitialized vector. e.g. IntegerVector out = no_init(10) ;
        * include/Rcpp/sugar/functions/unique.h: sugar version of %in% using 
        unordered_set
        * include/Rcpp/sugar/functions/minmax.h: min, max, and range

2012-11-14  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: create sourceCpp context list using 
          single statement

2012-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/announce/ANNOUNCE-0.10.0.txt: Fix typo spotted by Martin
	Morgan in announcement mail

2012-11-14  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/wrap.h: fix for wrap( std::complex<double> )
        * include/Rcpp/module/class_Base.h: factored out from Module.h
        * R/00_classes.R: the C++Class gains the parents slot to hold information
        about parent classes of the class
        * src/Module.cpp : The CppClass constructor fills the parents slot of C++Class

2012-11-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.0
        * inst/NEWS: Release 0.10.0
        * inst/include/Rcpp/config.h: Release 0.10.0
        * debian/*: Similarly updated for new release to Debian
